src/ui/snapshots/state/default/setup_repo/other_error.snap
---
source: src/ui/state/default/setup_repo.rs
expression: harness.backend()
---
"                                                                                "
"                                                                                "
"  ┌Repository Setup Error────────────────────────────────────────────────────┐  "
"  │Setup failed: Failed to fetch repository details from Azure DevOps        │  "
"  │                                                                          │  "
"  │Options:                                                                  │  "
"  │• Press 'r' to retry                                                      │  "
"  │• Press 'Esc' to go back                                                  │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                                                                "
"                                                                                "
